[gd_scene load_steps=8 format=3 uid="uid://5kxn4fv8t148"]

[ext_resource type="Script" path="res://player.gd" id="1_d87vr"]
[ext_resource type="Texture2D" uid="uid://n5jhvxsmitad" path="res://rifle/crosshair-not-aiming.png" id="2_4rbhx"]
[ext_resource type="Texture2D" uid="uid://buk1mb2082jpx" path="res://rifle/crosshair-aiming.png" id="2_gnhyu"]
[ext_resource type="PackedScene" uid="uid://dtlguoiv5dk0o" path="res://rifle/rifle.tscn" id="3_ufkhg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j5l0w"]
diffuse_mode = 3
albedo_color = Color(0.523788, 0.51338, 0.217896, 1)
metallic_specular = 1.0
roughness = 0.89

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mah2n"]
material = SubResource("StandardMaterial3D_j5l0w")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_0uclb"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Character" type="CharacterBody3D"]
script = ExtResource("1_d87vr")
normal_crosshair = ExtResource("2_4rbhx")
aiming_crosshair = ExtResource("2_gnhyu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00384212, 0.0100894, -0.00238705)
mesh = SubResource("CapsuleMesh_mah2n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_0uclb")

[node name="CameraOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65201, 0)

[node name="Camera3D" type="Camera3D" parent="CameraOrigin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.93147, 0.57388, 2.66643)
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_4rbhx")

[node name="Rifle" parent="." instance=ExtResource("3_ufkhg")]
transform = Transform3D(0.0284088, 0.120143, -0.157349, -0.0186599, 0.159878, 0.118705, 0.197091, -0.00218083, 0.0339189, 0.0545321, 0.193626, 0.699421)

[node name="RifleEquipedPosition" type="Marker3D" parent="."]
transform = Transform3D(-0.997585, 0.00154585, -0.0694346, -0.00489114, 0.995706, 0.0924401, 0.0692793, 0.0925565, -0.993294, 0.266748, 0.369831, -0.594145)
rotation_edit_mode = 2

[node name="CameraAimingPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.400707, 0.950153, 1.28436)
